[package]
name = "norms-core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { version = "0.1" }
clap = { version = "3.0", features = ["derive", "unstable-v4"] }
enum_dispatch = { version = "0.3" }
futures = { version = "0.3" }
log = { version = "0.4" }
pretty_env_logger = { version = "0.4" }
tokio = { version = "1.19", features = ["full"] }
tower-lsp = { version = "0.17" }

[[bin]]
name = "norms"
path = "src/main.rs"
